kubernetes/apps/linkding/service.yml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: apps
  labels:
    app.kubernetes.io/name: linkding
spec:
  ports:
  - port: 9090
    targetPort: 9090
    name: http
  selector:
    app: linkding
