kubernetes/apps/linkding/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`links.woitzik.dev`)
    kind: Rule
    middlewares: [{name: authelia}]
    services: [{name: linkding, port: 9090}]
  tls: {secretName: wildcard-woitzik-dev-tls}
